[tool.poetry]
name = "transit-app"
version = "0.1.0"
description = ""
authors = ["juhanikat <juhani.kataja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
