[tool.poetry]
name = "transit-app"
version = "0.1.0"
description = ""
authors = ["juhanikat <juhani.kataja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shapely = "^2.0.4"
matplotlib = "^3.9.1"
mplcursors = "^0.5.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
